.deploy/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-label-webhook
webhooks:
  - name: podlabel.k8s.io
    clientConfig:
      service:
        name: mutating-webhook-service
        namespace: default
        path: /mutate
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNwakNDQVk0Q0NRQ3FLV3BpVjRZR0d6QU5CZ2txaGtpRzl3MEJBUXNGQURBVk1STXdFUVlEVlFRRERBcFgKWldKb2IyOXJJRU5CTUI0WERUSTFNVEF4T0RFeU16UXlORm9YRFRJMk1UQXhPREV5TXpReU5Gb3dGVEVUTUJFRwpBMVVFQXd3S1YyVmlhRzl2YXlCRFFUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCCkFNREdPbmhqYytsQ256aVZkdGhnajdrNVpueVBjMmQ1RTdmRlBBaTI0Q1pJWGpQMnFjRTdRV1YxSkpDcWUvWnYKV1d6MjdyQURuUzdpMFBOZ0M0MzZzSDVla2JFTHFwS1dwM1Ayb2JhTGdwQkRqenBvQVhJb0lHOW9nYnNSVENOTgo4dWxMMGdXbGR [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
